<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.yangtianyu.frameworklab.home.HomeFragment"
        android:label="@string/home_title">
        <action
            android:id="@+id/action_homeFragment_to_imageLoaderLabFragment"
            app:destination="@id/imageLoaderLabFragment" />
        <action
            android:id="@+id/action_homeFragment_to_vehicleDashboardFragment"
            app:destination="@id/vehicleDashboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/imageLoaderLabFragment"
        android:name="com.yangtianyu.frameworklab.imageloader.ImageLoaderLabFragment"
        android:label="@string/image_loader_lab_title" />

    <fragment
        android:id="@+id/vehicleDashboardFragment"
        android:name="com.yangtianyu.frameworklab.vehicle.VehicleDashboardFragment"
        android:label="@string/vehicle_dashboard_title" />

</navigation>
